--- a/team_drk.html
+++ b/team_drk.html
@@ -88,7 +88,7 @@
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Drone Shows</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Need the best Drone Shows in Kerala hosted at your event? We do custom shows according to your needs</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -96,7 +96,7 @@
               <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Community Store</h4>
-            <p class="text-muted">DRK - Commuity supporetd  drone store with exclusive offers for DRK members</p>
+            <p class="text-muted">DRK - Community supported Drone Store with exclusive offers for DRK members</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -104,7 +104,7 @@
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Workshops</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Need help in building your first Drone? Let Kerala's finest host custom-tailored workshops for your needs</p>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">EVENTS</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Browse through our portfolio of events</h3>
           </div>
         </div>
         <div class="row">
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Find out more about Drone Racers Kerala</h3>
           </div>
         </div>
         <div class="row">
@@ -226,11 +226,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2009-2011</h4>
+                    <h4>July 2017</h4>
                     <h4 class="subheading">Our Humble Beginnings</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">DRK was founded by a group of passionate racers as a community to bring all drone pilots in Kerala under one umbrella</p>
                   </div>
                 </div>
               </li>
@@ -240,11 +240,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>August 2017</h4>
+                    <h4 class="subheading">The First Step</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">DRK's first Drone Race was held</p>
                   </div>
                 </div>
               </li>
@@ -254,11 +254,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>December 2017</h4>
+                    <h4 class="subheading">A Community is Born</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">DRK grew in size to the largest single community of Drone Racers in India</p>
                   </div>
                 </div>
               </li>
@@ -268,11 +268,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2014</h4>
+                    <h4>January 2018</h4>
                     <h4 class="subheading">Phase Two Expansion</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">DRK's first Drone Show was conducted at College of Engineering, Trivandrum</p>
                   </div>
                 </div>
               </li>
